# COMP0037_CW3_GROUP_B

./: .gitignore  LICENSE  README.md
comp0037_cw1/: CMakeLists.txt  package.xml
comp0037_cw1/launch/: factory_scenario.launch  launch_standalone_planner.launch  test_scenario.launch
comp0037_cw1/matlab/: map.yaml  writeOutFiles.m
comp0037_cw2/: CMakeLists.txt  package.xml
comp0037_cw2/launch/: exploration_2_mapping.launch  map_test.launch  mapping_prespecified_waypoints.launch  mapping_simple_plus_scenario.launch  mapping_simple_walls_scenario.launch  part_1_1_mapping.launch  part_1_2_mapping.launch  part_2_1_reactive_planner.launch  part_2_2_reactive_planner.launch  part_2_exploration_mapping.launch  part_3_1_reactive_planner.launch  part_3_2_reactive_planner.launch  part_4_reactive_exploration_mapping.launch
comp0037_cw2/scenarios/simple_maps/: simple_walls_goal.txt
comp0037_cw3/: CMakeLists.txt  package.xml
comp0037_cw3/launch/: map_test1.launch  mapping_prespecified_waypoints.launch  mapping_simple_plus_scenario.launch  part2_drive_factory.launch  part2_drive_factory_obstacles_sometimes.launch  part_1_exploration_mapping.launch  test_obstacler.launch  test_obstacler.launch~  test_obstacler1.launch  test_obstacler1.launch~  test_obstacler_factory.launch  test_obstacler_factory_sometimes_obstacles.launch
comp0037_cw3/scenarios/factory/: obstacler_test_goals.txt  obstacler_test_obstacles.txt  obstacler_test_sometimes_obstacles.txt  part2_goals.txt  part2_obstacles.txt  part2_obstacles_sometimes.txt  s03_goals.txt
comp0037_example/: CMakeLists.txt  package.xml
comp0037_example/scripts/: moving_the_robot.py
comp0037_explorer/: CMakeLists.txt  package.xml  setup.py
comp0037_explorer/launch/: explorer.launch
comp0037_explorer/scripts/: explorerNode
comp0037_launch/: CMakeLists.txt  package.xml
comp0037_launch/launch/: lab_position_control.launch~37e41197bc67075dfd05f652503fc57736d127ae  lab_position_control.launch~HEAD
comp0037_mapper/: CMakeLists.txt  package.xml  setup.py
comp0037_mapper/launch/: mapper.launch
comp0037_mapper/scripts/: mapperNode.py
comp0037_mapper/srv/: RequestMapUpdate.srv
comp0037_obstacler/: CMakeLists.txt  package.xml  setup.py
comp0037_obstacler/launch/: obstacler.launch
comp0037_obstacler/scripts/: obstaclerNode
comp0037_reactive_planner_controller/: CMakeLists.txt  package.xml  setup.py
comp0037_reactive_planner_controller/scripts/: map_tester.py  minkowski_sum_tester.py  planner_controller_node.py  run_fifo_standalone.py  run_lifo_standalone.py
comp0037_reactive_planner_controller/src/comp0037_reactive_planner_controller/: a_star_planner.py  astar_octile_planner.py  controller_base.py  dijkstra_planner.py  general_forward_search_algorithm.py  occupancy_grid.py  planned_path.py  planner_base.py  planner_controller_base.py  reactive_planner_controller.py  reactive_planner_controller.py~
comp0037_reactive_planner_controller/src/comp313p_reactive_planner_controller/: passive_planner_controller.py
comp0037_resources/: CMakeLists.txt  package.xml
comp0037_resources/maps/: factory_dynamic.yaml  (+2 more)
comp0037_the_boss/: CMakeLists.txt  package.xml
comp0037_time_server/: CMakeLists.txt  package.xml
comp313p_cw1/: CMakeLists.txt  package.xml
comp313p_cw1/launch/: factory_scenario.launch  launch_s01.launch  launch_s02.launch  launch_standalone_planner.launch  map_test.launch  test_scenario.launch
comp313p_cw1/matlab/: write_s02.m
comp313p_cw1/scenarios/s01_empty/: s01_goals.txt  s01_map.txt  s01_map.yaml
comp313p_cw1/scenarios/s02_factory/: s02_factory.txt  s02_factory.yaml  s02_factory_goals.txt  s02_goals.txt
comp313p_cw2/: CMakeLists.txt  package.xml
comp313p_cw2/launch/: map_test.launch  mapping_and_exploring_factory_scenario.launch  mapping_factory_scenario.launch  mapping_simple_plus_scenario.launch  mapping_simple_walls_scenario.launch  part_1_1_mapping.launch  part_1_2_mapping.launch  part_2_exploration_mapping.launch  part_3_1_reactive_planner.launch  part_3_2_reactive_planner.launch  part_4_reactive_exploration_mapping.launch
comp313p_cw2/scenarios/factory/: part_3_1_reachable_goals.txt  part_3_2_unreachable_goal.txt
comp313p_cw2/scenarios/simple_maps/: simple_plus_goal.txt
comp313p_example/: CMakeLists.txt  package.xml
comp313p_explorer/: CMakeLists.txt  package.xml  setup.py
comp313p_launch/: CMakeLists.txt  package.xml
comp313p_mapper/: CMakeLists.txt  package.xml  setup.py
comp313p_mapper/launch/: mapper.launch
comp313p_mapper/msg/: MapUpdate.msg  UpdatedMap.msg
comp313p_mapper/scripts/: mapperNode
comp313p_mapper/src/comp313p_mapper/: bresenhamalgorithm.py  mapper_node.py
comp313p_mapper/srv/: ChangeMapperState.srv  RequestMapUpdate.srv
comp313p_planner_controller/: CMakeLists.txt  setup.py
comp313p_reactive_planner_controller/: CMakeLists.txt  package.xml  setup.py
comp313p_reactive_planner_controller/scripts/: map_tester.py  minkowski_sum_tester.py  mock_slam_node.py  planner_controller_node.py  run_fifo_standalone.py  run_lifo_standalone.py
comp313p_reactive_planner_controller/src/comp313p_reactive_planner_controller/: a_star_planner.py  cell.py  cell_based_forward_search.py  controller_base.py  dijkstra_planner.py  general_forward_search_algorithm.py  grid_drawer.py  mapping_system.py  move2goal_controller.py  occupancy_grid.py  passive_planner_controller.py  planner_base.py  planner_controller_base.py  reactive_planner_controller.py  search_grid.py
comp313p_reactive_planner_controller/srv/: Goal.srv
comp313p_resources/: CMakeLists.txt  package.xml
comp313p_the_boss/: CMakeLists.txt  package.xml
comp313p_time_server/: CMakeLists.txt  package.xml
comp313p_time_server/scripts/: time_server_node.py
stdr_simulator/stdr_robot/: CMakeLists.txt  package.xml
stdr_simulator/stdr_robot/include/stdr_robot/: stdr_robot.h
stdr_simulator/stdr_robot/include/stdr_robot/sensors/: laser.h
stdr_simulator/stdr_robot/src/: stdr_robot.cpp
stdr_simulator/stdr_robot/src/motion/: ideal_motion_controller.cpp
stdr_simulator/stdr_robot/src/sensors/: laser.cpp
(+76 files in other folders)
