<?xml version="1.0"?>
<package>
    <name>comp0037_reactive_planner_controller</name>
    <version>1.0.0</version>
    <description>This package is where you would bundle together your
  planner and controller for the robot.</description>
    <maintainer email="s.julier@ucl.ac.uk">Simon Julier</maintainer>
    <license>BSD?</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
</package>
