<?xml version="1.0"?>
<package>
  <name>comp313p_cw1</name>
  <version>1.0.0</version>
  <description>This package automates configuring and lauching both
  the map server and turtlesimulator packages.</description>

  <maintainer email="s.julier@ucl.ac.uk">Simon Julier</maintainer>

  <license>BSD?</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>comp313p_planner_controller</run_depend>
  
</package>
