<?xml version="1.0"?>
<package format="2">
  <name>comp313p_mapper</name>
  <version>0.0.0</version>
  <description>The comp313p_mapper package</description>

  <maintainer email="s.julier@ucl.ac.uk">ucacsjj</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>comp313p_reactive_planner_controller</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>comp313p_reactive_planner_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
