<?xml version="1.0"?>
<package>
  <name>comp313p_time_server</name>
  <version>0.0.0</version>
  <description>The time_server package</description>
  <maintainer email="s.julier@ucl.ac.uk">ucacsjj</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>